--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
-    "mysql2": "^3.1.0"
+    "mysql2": "^3.1.0",
+    "sequelize": "^6.28.2"
   }
 }
